banners fixes, overflow try to fix

--- a/src/components/Header/Menu/Menu.module.scss
+++ b/src/components/Header/Menu/Menu.module.scss
@@ -1,169 +1,3 @@
-$fontBlack: #121212;
-$orange: #ff6c39;
-
-a, a:visited {
-  color: $fontBlack;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-.container {
-  box-sizing: border-box;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 20px;
-  position: relative;
-}
-
-.wrapper {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 1000;
-  box-shadow: 0px 0px 40.94px 5.06px rgba(3, 7, 8, 0.08);
-  background-color: rgb(255, 255, 255);
-}
-
-.content {
-  color: $fontBlack;
-  font-size: 20px;
-  height: 100px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: relative;
-  padding-left: 65px;
-  transition: all 300ms;
-}
-
-.content.minified {
-  height: 85px;
-}
-
-.logo {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-.logo img {
-  width: 190px;
-}
-
-.leftBlock {
-  display: flex;
-}
-
-.rightBlock {
-  display: flex;
-  align-items: baseline;
-}
-
-.link {
-  display: flex;
-  align-items: flex-start;
-  font-size: 17px;
-  margin-right: 6%;
-}
-
-.link.number {
-  font-family: "Helvetica Neue Medium" !important;
-  margin-right: 0;
-  text-align: right;
-  font-size: 20px;
-}
-
-.link img {
-  display: inline-block;
-  margin-right: 5px;
-}
-
-.contacts {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  width: 185px;
-  margin-right: 20px;
-}
-
-.contacts div {
-  font-size: 16px;
-}
-
-.menuIcon {
-  position: absolute;
-  font-size: 60px;
-  left: 12px;
-  transition: all 200ms;
-  cursor: pointer;
-}
-
-.menuIcon.opened {
-  z-index: 3000;
-  transform: scale(1.5);
-}
-
-.menuIcon.opened span {
-  background-color: #171717;
-}
-
-.menuIcon span {
-  display: block;
-  width: 24px;
-  height: 2px;
-  background-color: $fontBlack;
-  margin-bottom: 5px;
-  transition: all 200ms;
-  transform-origin: left;
-}
-
-.menuIcon.opened span:nth-child(1) {
-  transform: rotate(45deg) translateY(-2px);
-}
-
-.menuIcon.opened span:nth-child(2) {
-  opacity: 0;
-}
-
-.menuIcon.opened span:nth-child(3) {
-  transform: rotate(-45deg) translateY(2px);
-}
-
-@media screen and (max-width: 1200px) {
-  .link, .contacts {
-    display: none;
-  }
-  .searchIcon {
-    display: flex;
-  }
-  .rightBlock a[aria-current] {
-    display: none;
-  }
-  .content {
-    height: 70px;
-    transition: all 400ms;
-  }
-
-  .content.minified {
-    height: 65px;
-  }
-
-  .logo img {
-    width: 140px;
-    transition: all 400ms;
-  }
-
-  .content.minified .logo img {
-    width: 110px;
-  }
-
-  .container {
-    padding: 0 15px 0 10px;
-  }
-}
-
 
 //menu
 
@@ -181,7 +15,7 @@ a:hover {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgba(255, 255, 255, 1);
+  background-color: rgba(255, 255, 255, 0.96);
   transition: all 500ms;
   padding: 0 7px;
   overflow-y: scroll;
