--- a/src/components/pages/mice/MicePageBanner/MicePageBanner.module.scss
+++ b/src/components/pages/mice/MicePageBanner/MicePageBanner.module.scss
@@ -198,7 +198,7 @@
       }
 
       span:nth-child(2) {
-        font-size: 10.7vw;
+        font-size: 9.7vw;
       }
 
       span:last-of-type {
